2000-08-30  OKUJI Yoshinori  <okuji@gnu.org>

	* configure.in (CPPFLAGS): Remove -Wundef by default. Add the
	option only if the C compiler supports it, because GCC 2.7.x
	doesn't support it.
	* grub/main.c (longopts): The type of the argument for "hold" is
	changed to OPTIONAL_ARGUMENT.
	(main): If --hold is specified, check if OPTARG is zero. If so,
	set HOLD to -1, otherwise, set it to the digit OPTARG.
	If HOLD is greater than zero, decrease it once per loop.
	
2000-08-30  OKUJI Yoshinori  <okuji@gnu.org>

	The command-line interface is switched to single-line editing
	mode.
	
	* stage2/char_io.c [!STAGE1_5] (get_cmdline): Extensively
	rewritten. The nested functions cl_print and cl_kill_to_end are
	removed, cl_refresh, cl_backward, cl_forward and cl_delete are
	added, and, cl_init and cl_insert are rewritten from scratch.
	See the source code, for more information. I don't think this
	kind of changes can be represented in ChangeLog.
	[!STAGE1_5] (CMDLINE_WIDTH): New macro.
	[!STAGE1_5] (CMDLINE_MARGIN): Likewise.
	* stage2/shared.h (TERMINAL_DUMB): Likewise.
	
2000-08-28  OKUJI Yoshinori  <okuji@gnu.org>

	* grub/asmstub.c (console_putchar) [HAVE_LIBCURSES]: If
	USE_CURSES is true, emulate a new line like a ordinary terminal,
	because ncurses treats it badly. If current position on y-axis
	is the bottom of the screen, call scroll. Otherwise, call move
	with the arguments, Y + 1 and X, where X and Y are current
	position of the cursor.
	
2000-08-28  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/asm.S (console_putchar): Don't print a carriage return
	when C is a newline.
	* stage2/char_io.c (grub_putchar): Call grub_putchar with the
	arugment set to a carriage return, if C is a newline.
	[!STAGE1_5 && SUPPORT_SERIAL]: Don't print a carriage return
	when C is a newline.
	
2000-08-27  OKUJI Yoshinori  <okuji@gnu.org>

	* lib/device.c [__linux__]: Don't include linux/fs.h.
	[!BLKGETSIZE] (BLKGETSIZE): Defined as _IO(0x12,96).